src/parser/snapshots/minic__parser__parser_tests__test_binary_expr__binary_expr_prec_105.snap
---
source: src/parser/parser_tests.rs
expression: "test_string_success(\"int main(void) { return 1 * 10 / 5 % 3; }\")?"
---
type: Program
function_defs:
  - type: FunctionDef
    name: "(pos: 4 - 8) (1:5 - 1:9) Identifier(Symbol(0)) `main`"
    params: []
    body:
      - type: ReturnStmt
        expr:
          type: BinaryExpr(Modulus)
          operator: "(pos: 35 - 36) (1:36 - 1:37) Percent `%`"
          left:
            type: BinaryExpr(Divide)
            operator: "(pos: 31 - 32) (1:32 - 1:33) Slash `/`"
            left:
              type: BinaryExpr(Multiply)
              operator: "(pos: 26 - 27) (1:27 - 1:28) Asterisk `*`"
              left:
                type: Constant(Integer(1))
                token: "(pos: 24 - 25) (1:25 - 1:26) Literal(Integer(1)) `1`"
              right:
                type: Constant(Integer(10))
                token: "(pos: 28 - 30) (1:29 - 1:31) Literal(Integer(10)) `10`"
            right:
              type: Constant(Integer(5))
              token: "(pos: 33 - 34) (1:34 - 1:35) Literal(Integer(5)) `5`"
          right:
            type: Constant(Integer(3))
            token: "(pos: 37 - 38) (1:38 - 1:39) Literal(Integer(3)) `3`"
