src/parser/snapshots/minic__parser__parser_tests__test_binary_expr__binary_expr_prec_95.snap
---
source: src/parser/parser_tests.rs
expression: "test_string_success(\"int main(void) { return 1 << 2 >> 3 << 4; }\")?"
---
type: Program
function_defs:
  - type: FunctionDef
    name: "(pos: 4 - 8) (1:5 - 1:9) Identifier(Symbol(0)) `main`"
    params: []
    body:
      - type: ReturnStmt
        expr:
          type: BinaryExpr(LeftShift)
          operator: "(pos: 36 - 38) (1:37 - 1:39) LeftShift `<<`"
          left:
            type: BinaryExpr(RightShift)
            operator: "(pos: 31 - 33) (1:32 - 1:34) RightShift `>>`"
            left:
              type: BinaryExpr(LeftShift)
              operator: "(pos: 26 - 28) (1:27 - 1:29) LeftShift `<<`"
              left:
                type: Constant(Integer(1))
                token: "(pos: 24 - 25) (1:25 - 1:26) Literal(Integer(1)) `1`"
              right:
                type: Constant(Integer(2))
                token: "(pos: 29 - 30) (1:30 - 1:31) Literal(Integer(2)) `2`"
            right:
              type: Constant(Integer(3))
              token: "(pos: 34 - 35) (1:35 - 1:36) Literal(Integer(3)) `3`"
          right:
            type: Constant(Integer(4))
            token: "(pos: 39 - 40) (1:40 - 1:41) Literal(Integer(4)) `4`"
