src/parser/snapshots/minic__parser__parser_tests__test_binary_expr__binary_mix.snap
---
source: src/parser/parser_tests.rs
expression: "test_string_success(\"int main(void) { return 1 + 2 << 3 - 4 & 5 | 6 ^ 7 * 8 / 9 % 10; }\")?"
---
type: Program
function_defs:
  - type: FunctionDef
    name: "(pos: 4 - 8) (1:5 - 1:9) Identifier(Symbol(0)) `main`"
    params: []
    body:
      - type: ReturnStmt
        expr:
          type: BinaryExpr(BitOr)
          operator: "(pos: 43 - 44) (1:44 - 1:45) BitOr `|`"
          left:
            type: BinaryExpr(BitAnd)
            operator: "(pos: 39 - 40) (1:40 - 1:41) BitAnd `&`"
            left:
              type: BinaryExpr(LeftShift)
              operator: "(pos: 30 - 32) (1:31 - 1:33) LeftShift `<<`"
              left:
                type: BinaryExpr(Add)
                operator: "(pos: 26 - 27) (1:27 - 1:28) Plus `+`"
                left:
                  type: Constant(Integer(1))
                  token: "(pos: 24 - 25) (1:25 - 1:26) Literal(Integer(1)) `1`"
                right:
                  type: Constant(Integer(2))
                  token: "(pos: 28 - 29) (1:29 - 1:30) Literal(Integer(2)) `2`"
              right:
                type: BinaryExpr(Subtract)
                operator: "(pos: 35 - 36) (1:36 - 1:37) Minus `-`"
                left:
                  type: Constant(Integer(3))
                  token: "(pos: 33 - 34) (1:34 - 1:35) Literal(Integer(3)) `3`"
                right:
                  type: Constant(Integer(4))
                  token: "(pos: 37 - 38) (1:38 - 1:39) Literal(Integer(4)) `4`"
            right:
              type: Constant(Integer(5))
              token: "(pos: 41 - 42) (1:42 - 1:43) Literal(Integer(5)) `5`"
          right:
            type: BinaryExpr(BitXor)
            operator: "(pos: 47 - 48) (1:48 - 1:49) BitXor `^`"
            left:
              type: Constant(Integer(6))
              token: "(pos: 45 - 46) (1:46 - 1:47) Literal(Integer(6)) `6`"
            right:
              type: BinaryExpr(Modulus)
              operator: "(pos: 59 - 60) (1:60 - 1:61) Percent `%`"
              left:
                type: BinaryExpr(Divide)
                operator: "(pos: 55 - 56) (1:56 - 1:57) Slash `/`"
                left:
                  type: BinaryExpr(Multiply)
                  operator: "(pos: 51 - 52) (1:52 - 1:53) Asterisk `*`"
                  left:
                    type: Constant(Integer(7))
                    token: "(pos: 49 - 50) (1:50 - 1:51) Literal(Integer(7)) `7`"
                  right:
                    type: Constant(Integer(8))
                    token: "(pos: 53 - 54) (1:54 - 1:55) Literal(Integer(8)) `8`"
                right:
                  type: Constant(Integer(9))
                  token: "(pos: 57 - 58) (1:58 - 1:59) Literal(Integer(9)) `9`"
              right:
                type: Constant(Integer(10))
                token: "(pos: 61 - 63) (1:62 - 1:64) Literal(Integer(10)) `10`"
