src/parser/snapshots/minic__parser__parser_tests__test_binary_expr__bitwise_and.snap
---
source: src/parser/parser_tests.rs
expression: "test_string_success(\"int main(void) { return 1 & 2 & 3; }\")?"
---
type: Program
function_defs:
  - type: FunctionDef
    name: "(pos: 4 - 8) (1:5 - 1:9) Identifier(Symbol(0)) `main`"
    params: []
    body:
      - type: ReturnStmt
        expr:
          type: BinaryExpr(BitAnd)
          operator: "(pos: 30 - 31) (1:31 - 1:32) BitAnd `&`"
          left:
            type: BinaryExpr(BitAnd)
            operator: "(pos: 26 - 27) (1:27 - 1:28) BitAnd `&`"
            left:
              type: Constant(Integer(1))
              token: "(pos: 24 - 25) (1:25 - 1:26) Literal(Integer(1)) `1`"
            right:
              type: Constant(Integer(2))
              token: "(pos: 28 - 29) (1:29 - 1:30) Literal(Integer(2)) `2`"
          right:
            type: Constant(Integer(3))
            token: "(pos: 32 - 33) (1:33 - 1:34) Literal(Integer(3)) `3`"
